docs: Document jdk11 classifier for Java 11-21 compatibility (#1600)
* docs: Document jdk8 classifier for Java 11-21 compatibility

Add documentation for the jdk8 classifier artifact that excludes
Java 22 FFM classes, addressing issues for users targeting Java 11-21.

The jdk8 classifier has been available since FFM support was added
but was not well documented. This update adds comprehensive guidance:

- README.md: Add installation section for jdk8 classifier
- Website intro: Add compatibility info in getting started guide
- Website troubleshooting: Add as first troubleshooting item
- Website terminal-providers: Add detailed FFM provider notes

The jdk8 artifact excludes org.jline.terminal.impl.ffm.* classes
(compiled with Java 22) while providing full JLine functionality
via JNI or Exec providers.

Fixes #1556

* docs: Add native access requirement to FFM provider warning

Update FFM provider warning to clarify that both Java 22+ and
native access permissions (--enable-native-access) are required.

Addresses review feedback in PR #1600.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* Rename jdk8 classifier to jdk11 for JLine 4.x

JLine 4.x requires Java 11+ as the minimum runtime, so rename the
classifier from 'jdk8' to 'jdk11' for clarity and accuracy.

Changes:
- jline/pom.xml: Rename jar execution from jdk8 to jdk11
- README.md: Update documentation to use jdk11 classifier
- Website docs: Update all references to use jdk11 classifier

Note: JLine 3.x continues to use the jdk8 classifier for Java 8-21
compatibility.